# robolineage

./: .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  AGENTS.md  CITATION.cff  LICENSE  README.md  cyclonedds.xml  pyproject.toml  run.sh
configs/: README.md  arx_one.yaml  arx_one_rs3.yaml  robolineage_default.yaml  training_framework.example.yaml
docs/: agent_roles.md  artifact_contracts.md  artifact_walkthrough.md  dataset_governance.md  evaluation_and_recollection.md  integration_path.md  lifecycle_artifact_contract.md  operator_workflow.md  overview.md  prompt_contracts.md  release_plan.md  reproducibility.md  reproducibility_scope.md  robot_onboarding.md  training_integration.md  vsa_post_review.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
prompts/: dataset_governance_prompt.md  deployment_governance_prompt.md  evaluation_prompt.md  master_summary_prompt.md  post_rollout_review_prompt.md  robot_onboarding_prompt.md  task_config_prompt.md  training_discovery_prompt.md  vsa_prompt.md
robot_profiles/: arx_one_default.yaml
schemas/: common.schema.json  dataset_decision.schema.json  dataset_lock.schema.json  deployment_recommendation.schema.json  evaluation_summary.schema.json  next_collection_brief.schema.json  policy_metadata.schema.json  post_rollout_review.schema.json  robot_profile.schema.json  rollout_manifest.schema.json  task_config.schema.json  training_run.schema.json  vsa_snapshot.schema.json
scripts/: OWNERSHIP.yaml  README.md  check_contracts_imports.py  check_ownership.py  (+3 more)
(+311 files in other folders)
